--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "@mui/icons-material": "^6.1.10",
     "@mui/material": "^6.1.10",
     "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
     "lucide-react": "^0.468.0",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.6",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.0.2",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.6",
+    "sweetalert2": "^11.14.5"
   },
   "scripts": {
     "start": "react-scripts start",
