--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lucide-react": "^0.468.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.6",
+    "react-cookie": "^7.2.2",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
