--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "@mui/material": "^6.1.10",
     "@react-google-maps/api": "^2.20.6",
     "@supabase/supabase-js": "^2.47.12",
-    "axios": "^1.7.9",
+    "axios": "^1.9.0",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.9",
     "cra-template": "1.2.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
@@ -20,6 +21,7 @@
     "lucide-react": "^0.468.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.6",
+    "react-chartjs-2": "^5.3.0",
     "react-cookie": "^7.2.2",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
